feat(clinical-os): enhance doctor consultation with doctor filter, patient history, copy prescription, and visit edit